fixing and refactoring from 1790 merge